# Moaz-Elgabry-plugins

./: .gitignore  PLUGIN_MANAGER_DEVELOPMENT_NOTES.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/: FUNDING.yml
.github/workflows/: build-plugin-manager.yml  deploy-plugin-manager-pages.yml
.tmp-manifest-test/docs/plugins/: index.json
.tmp-manifest-test/docs/plugins/chromaspace/: beta.json  stable.json
.tmp-manifest-test/docs/plugins/me-opendrt/: stable.json
docs/: LOCAL_TESTING.md
docs/plugins/: index.json
docs/plugins/chromaspace/: beta.json  stable.json
docs/plugins/dev/: chromaspace.local.json  index.json  lensdiff.local.json  me-opendrt.1.2.11.local.json  me-opendrt.bad-checksum.local.json  me-opendrt.older.local.json  me-opendrt.rollback-fail.local.json
docs/plugins/lensdiff/: beta.json  stable.json
docs/plugins/me-opendrt/: beta.json  stable.json
docs/release-notes/: chromaspace-0.0.0-dev.html  lensdiff-0.0.0-dev.html  manager-0.1.0.html  me-opendrt-0.0.0-dev.html
docs/updates/: latest.json
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  installer.rs  lib.rs  main.rs  models.rs  settings.rs
tools/: generate-plugin-channel-manifests.mjs  generate-plugin-channel-manifests.test.mjs  generate-updater-feed.mjs  switch-me-opendrt-manifest.cmd  switch-me-opendrt-manifest.ps1
tools/fixtures/: chromaspace-releases.sample.json  me-opendrt-releases.sample.json
