[package]
name = "moaz-elgabry-plugins"
version = "0.1.18"
edition = "2021"
description = "Cross-platform desktop manager for Chromaspace, LensDiff, and ME_OpenDRT"

[package.metadata]

[lib]
name = "moaz_elgabry_plugins_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
flate2 = "1.0"
fs_extra = "1.3"
hex = "0.4"
plist = "1.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.38"
tar = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tempfile = "3.10"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
